--- a/trabalho/wwwroot/css/site.css
+++ b/trabalho/wwwroot/css/site.css
@@ -1,4 +1,3 @@
-
 /* ==========================================================================
    #FONT
    ========================================================================== */
@@ -426,9 +425,9 @@ td.active {
     background-color: #2c6ed5;
 }
 
-input[type="date" i] {
+/* input[type="date" i] {
     padding: 14px;
-}
+} */
 
 .table-condensed td, .table-condensed th {
     font-size: 14px;
@@ -585,7 +584,7 @@ input {
     top: 50%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%); 
+    -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
     left: 0;
